--- a/Statinf/echantillonnage-et-theoremes-limites.html
+++ b/Statinf/echantillonnage-et-theoremes-limites.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-10-08" />
+<meta name="date" content="2019-10-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -455,10 +455,10 @@ prouvé avec rigueur.</p>
 </div>
 <p><strong>Application 1</strong>:</p>
 <p>Pour une taille d’échantillon <span class="math inline">\(n\)</span> suffisamment grande, on peut considérer que <span class="math inline">\(\overline{X}_n\)</span> a pour loi:</p>
-<p><span class="math display">\[ \overline{X}_n \thicksim \mathcal{N}\big(m, \frac{\sigma^2}{n}\big)\]</span>
-:::rmdcaution
-Dans la notation de la loi normale ci dessus <span class="math inline">\(\frac{\sigma^2}{n}\)</span> est la variance. <span class="math inline">\(\frac{\sigma}{\sqrt{n}}\)</span> est l’écart-type.
-:::</p>
+<p><span class="math display">\[ \overline{X}_n \thicksim \mathcal{N}\big(m, \frac{\sigma^2}{n}\big)\]</span></p>
+<div class="rmdcaution">
+<p>Dans la notation de la loi normale ci dessus <span class="math inline">\(\frac{\sigma^2}{n}\)</span> est la variance. <span class="math inline">\(\frac{\sigma}{\sqrt{n}}\)</span> est l’écart-type.</p>
+</div>
 <p><strong>Application 2</strong>: la loi d’un pourcentage, étudiée dans la section suivante.</p>
 </div>
 </div>
