--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-10-08" />
+<meta name="date" content="2019-10-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -1193,8 +1193,12 @@ Figure 1.7: Exemples où la corrélation est presque nulle mais les variables ne
 variable quantitative <span class="math inline">\(Y\)</span>. On a alors <span class="math inline">\(p\)</span> sous-populations déterminées par les <span class="math inline">\(p\)</span> modalités de <span class="math inline">\(X\)</span>.</p>
 <p>L’étude de la liaison entre <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> consiste en l’étude des différences entre ces sous-populations: il y aura absence de lien si on ne distingue pas de différence notoire dans les caractéristiques de ces différentes sous-populations.</p>
 <p>Une façon commode de représenter les données dans le cas de l’étude simultanée d’une variable quantitative et d’une variable qualitative consiste à réaliser des boîtes à moustaches parallèles. Les boîtes à moustaches permettent de comparer facilement des groupes d’individus, par exemple ici les garçons et les filles parmi 237 étudiants<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>:</p>
-<pre><code>## Error in boxplot.default(split(mf[[response]], mf[-response], drop = drop, : object &#39;esilv&#39; not found
-## Error in boxplot.default(split(mf[[response]], mf[-response], drop = drop, : object &#39;esilv&#39; not found</code></pre>
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-21"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-1.png" alt="Boîtes à moustaches par sexe" width="40%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-2.png" alt="Boîtes à moustaches par sexe" width="40%" />
+<p class="caption">
+Figure 1.8: Boîtes à moustaches par sexe
+</p>
+</div>
 </div>
 <div id="deux-variables-qualitatives" class="section level3 unnumbered">
 <h3>Deux variables qualitatives</h3>
