--- a/Statinf/echantillonnage-et-theoremes-limites.html
+++ b/Statinf/echantillonnage-et-theoremes-limites.html
@@ -143,7 +143,9 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -193,6 +195,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.3</b> Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.3.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.1</b> Loi faible des grands nombres</a></li>
 <li class="chapter" data-level="2.3.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.2</b> Loi forte des grands nombres</a></li>
+<li class="chapter" data-level="" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#illustration-de-la-loi-des-grands-nombres"><i class="fa fa-check"></i>Illustration de la loi des grands nombres</a></li>
 <li class="chapter" data-level="2.3.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.3.3</b> Théorème central limite</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
@@ -355,7 +358,7 @@ A un échantillon, on peut associer plusieurs statistiques.
 <h2><span class="header-section-number">2.2</span> La statistique <span class="math inline">\(\overline{X}_n\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-55" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
+<span id="def:unnamed-chunk-56" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
 </div>
 
 <p><strong>Espérance et variance de <span class="math inline">\(\overline{X}_n\)</span></strong>:</p>
@@ -425,6 +428,69 @@ càd <span class="math inline">\(\forall \varepsilon &gt;0, P\big( \lim_{n \to \
 <p><span class="math inline">\(\overline{X}_n \text{ converge presque sûrement vers } m\)</span></p>
 </div>
 </div>
+<div id="illustration-de-la-loi-des-grands-nombres" class="section level3 unnumbered">
+<h3>Illustration de la loi des grands nombres</h3>
+<p>Prenons l’exemple d’un lancé de dé équilibré. On lance un dé et on note <span class="math inline">\(X\)</span> le résultat obtenu. La loi de <span class="math inline">\(X\)</span> est le suivant:</p>
+<table class="table table-striped" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<tbody>
+<tr>
+<td style="text-align:left;">
+<span class="math inline">\(x_i\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(1\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(2\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(3\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(4\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(5\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(6\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<span class="math inline">\(P(X = x_i)\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\frac{1}{6}\)</span>
+</td>
+</tr>
+</tbody>
+</table>
+<p>Et donc l’esprérance de <span class="math inline">\(X\)</span> est <span class="math inline">\(E(X)=\sum_i p_i x_i = 3.5\)</span>. Pour illustrer le théorème on va procéder à un échantillonage. On répète le lancement du dé <span class="math inline">\(n\)</span> fois. A chaque <span class="math inline">\(n\)</span> on va calculer la moyenne empirique des résultats obtenus, qu’on va noter <span class="math inline">\(\overline{X}_n\)</span>. Selon la la loi de grands nombre cette moyenne va converger vers l’espérance théorique:</p>
+<p><span class="math display">\[\overline{X}_n \rightarrow E(X)=m=3.5 \quad \text{quand} \quad n \rightarrow \infty\]</span></p>
+<p>Traçons l’évolution de la moyenne empirique en fonction de la taille <span class="math inline">\(n\)</span> de l’échantillon, dans quatres différents échantillonnages aléatoires:</p>
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-58"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-58-1.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonages" width="70%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-58-2.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonages" width="70%" />
+<p class="caption">
+Figure 2.2: Convergence de <span class="math inline">\(\overline{X}_n\)</span> vers <span class="math inline">\(m=3.5\)</span> pour deux différents échantillonages
+</p>
+</div>
+</div>
 <div id="theoreme-central-limite" class="section level3">
 <h3><span class="header-section-number">2.3.3</span> Théorème central limite</h3>
 
@@ -483,7 +549,7 @@ répétitions indépendantes d’une même épreuve dont la probabilité de succ
 <h2><span class="header-section-number">2.5</span> Etude de la statistique <span class="math inline">\(S^2\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-56" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
+<span id="def:unnamed-chunk-59" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
 <span class="math display">\[S_n^{2}=\frac{1}{n} \sum_{i=1}^{n}\left(X_{i}-\overline{X}_n\right)^{2}\]</span>
 </div>
 
