--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -143,7 +143,9 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -193,6 +195,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.3</b> Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.3.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.1</b> Loi faible des grands nombres</a></li>
 <li class="chapter" data-level="2.3.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.2</b> Loi forte des grands nombres</a></li>
+<li class="chapter" data-level="" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#illustration-de-la-loi-des-grands-nombres"><i class="fa fa-check"></i>Illustration de la loi des grands nombres</a></li>
 <li class="chapter" data-level="2.3.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.3.3</b> Théorème central limite</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
@@ -331,27 +334,115 @@ code span.wa { color: #bf0303; } /* Warning */
 <h1>Overview</h1>
 <p>Ce document est dédié pour le cours de Statistique Inférentielle destiné aux étudiants en année 3 de l’École supérieure d’ingénieurs Léonard-de-Vinci.</p>
 <!-- ([ESILV <i class="fas  fa-external-link-alt "></i>](https://www.esilv.fr/)).  -->
-<!-- ## Plan du cours {-} -->
-<!-- ```{r, eval=T, echo = F} -->
-<!-- x1 = c("Séance 1","Séance 2") -->
-<!-- x2 = c("Statistique descriptive + TP", -->
-<!--        "Echantillonage et estimation") -->
-<!-- x= data.frame("Séance" = x1, "Contenu"=x2) -->
-<!-- library(kableExtra) -->
-<!-- knitr::kable(x) %>% -->
-<!--   kable_styling(full_width = F) -->
-<!-- # pander::pandoc.table(x, row.names=F) -->
-<!-- # knitr::kable(t(x), format = "html", table.attr = "style='width:30%;'") -->
-<!-- #  -->
-<!-- # knitr::kable( -->
-<!-- #   list( -->
-<!-- #     x[1:6,], -->
-<!-- #     x[7:12,] -->
-<!-- #   ), row.names = F, -->
-<!-- #   booktabs = TRUE -->
-<!-- # ) -->
-<!-- ``` -->
+<div id="plan-du-cours" class="section level2 unnumbered">
+<h2>Plan du cours</h2>
+<table class="table" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+Séance
+</th>
+<th style="text-align:left;">
+Contenu
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Séance 1
+</td>
+<td style="text-align:left;">
+Statistique descriptive, <br>
+<strong>TP</strong> Prise en main sur R
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 2
+</td>
+<td style="text-align:left;">
+Echantillonage, <br>
+Théorèmes limites, <br>
+lois des <span class="math inline">\(\overline{X}_n, S_n^2\)</span> et <span class="math inline">\(P_n\)</span>, <br>
+<strong>TP</strong> sur l’illustration des théorèmes limites
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 3
+</td>
+<td style="text-align:left;">
+Estimation ponctuelle et recherche d’estimateur, <br>
+Méthode des moments, <br>
+Méthode de maximum de vraissemblance
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 4
+</td>
+<td style="text-align:left;">
+Estimation par Intervalle de Confiance, <br>
+<strong>TP</strong> sur l’estimation
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Contrôle continu
+</td>
+<td style="text-align:left;">
+<strong>Samedi</strong> le <strong>30 novembre 2019</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 5
+</td>
+<td style="text-align:left;">
+Tests d’Hypothèses
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 6
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 7
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 8
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 9
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Examen
+</td>
+<td style="text-align:left;">
+Semaine du 20 janvier 2020
+</td>
+</tr>
+</tbody>
+</table>
 
+</div>
 </div>
             </section>
 
