--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -143,7 +143,9 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -193,6 +195,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.3</b> Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.3.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.1</b> Loi faible des grands nombres</a></li>
 <li class="chapter" data-level="2.3.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.2</b> Loi forte des grands nombres</a></li>
+<li class="chapter" data-level="" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#illustration-de-la-loi-des-grands-nombres"><i class="fa fa-check"></i>Illustration de la loi des grands nombres</a></li>
 <li class="chapter" data-level="2.3.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.3.3</b> Théorème central limite</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
@@ -352,7 +355,7 @@ d’appartenir à l’échantillon.</p>
 </div>
 
 <div class="definition">
-<span id="def:unnamed-chunk-5" class="definition"><strong>Définition 1.1  (Echantillonnage aléatoire simple)  </strong></span>L’échantillonnage aléatoire simple est une méthode qui consiste à prélever au hasard et
+<span id="def:unnamed-chunk-6" class="definition"><strong>Définition 1.1  (Echantillonnage aléatoire simple)  </strong></span>L’échantillonnage aléatoire simple est une méthode qui consiste à prélever au hasard et
 de <strong>façon indépendante</strong>, <span class="math inline">\(n\)</span> individus ou unités d’échantillonnage d’une population à
 <span class="math inline">\(N\)</span> individus.
 </div>
@@ -495,7 +498,7 @@ Variance observée
 <p>On a “mesuré” une variable qualitative sur <span class="math inline">\(n\)</span> individus. Les données brutes sont constituées par la série des <span class="math inline">\(n\)</span> valeurs <span class="math inline">\(\{x_i; i=1,\ldots,n\}\)</span> avec <span class="math inline">\(x_i\)</span> le numéro de la modalité pour l’individu <span class="math inline">\(i\)</span>, <span class="math inline">\(x_i \in 1,\ldots,M\)</span>. Il est commode d’agréger ces données en comptant le nombre d’individus <span class="math inline">\(n_m\)</span> possédant la modalité <span class="math inline">\(m\)</span>. <span class="math inline">\(n_m\)</span> est un <strong>effectif</strong>, ou une <strong>fréquence absolue</strong> (par opposition à la fréquence relative <span class="math inline">\(n_m/n\)</span>)</p>
 <table class="kable_wrapper table" style="margin-left: auto; margin-right: auto;">
 <caption>
-<span id="tab:unnamed-chunk-6">Table 1.1: </span>Variable qualitative: données brutes (gauche) et agrégées (droite). <span class="math inline">\(n_m\)</span> nombre d’individus possédant la modalité <span class="math inline">\(m\)</span>
+<span id="tab:unnamed-chunk-7">Table 1.1: </span>Variable qualitative: données brutes (gauche) et agrégées (droite). <span class="math inline">\(n_m\)</span> nombre d’individus possédant la modalité <span class="math inline">\(m\)</span>
 </caption>
 <tbody>
 <tr>
@@ -618,8 +621,8 @@ effectif
 <div id="diagramme-en-batons-barplot" class="section level4 unnumbered">
 <h4>Diagramme en bâtons (barplot)</h4>
 <p>Il représente les données agrégées (groupées). Les modalités figurent en abscisse; la longueur d’un bâton le long de l’ordonnée est proportionnelle à l’effectif (ou à la fréquence). Il est utile de trier les modalités, généralement par fréquence décroissante.</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-7"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-7-1.png" alt="Diagramme en bâtons" width="70%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-8"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-8-1.png" alt="Diagramme en bâtons" width="70%" />
 <p class="caption">
 Figure 1.1: Diagramme en bâtons
 </p>
@@ -635,8 +638,8 @@ Figure 1.1: Diagramme en bâtons
 <div id="diagrammes-circulaires-pie-chart" class="section level4 unnumbered">
 <h4>Diagrammes circulaires (pie chart)</h4>
 <p>Le fameux “camembert” n’est commode que s’il y a peu de modalités. Ici encore, il est commode de trier les modalités par effectifs décroissants.</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-8"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-8-1.png" alt="Diagramme circulaire de la variable &quot;couleur des yeux&quot;" width="70%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-9"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-9-1.png" alt="Diagramme circulaire de la variable &quot;couleur des yeux&quot;" width="70%" />
 <p class="caption">
 Figure 1.2: Diagramme circulaire de la variable “couleur des yeux”
 </p>
@@ -686,8 +689,8 @@ Figure 1.2: Diagramme circulaire de la variable “couleur des yeux”
 </tbody>
 </table>
 <p>On peut resprésenter la série avec un diagramme en bâtons (vertical ou horizontal).</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-10"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-10-1.png" alt="Le nombre de personnes par ménage" width="45%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-10-2.png" alt="Le nombre de personnes par ménage" width="45%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-11"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-11-1.png" alt="Le nombre de personnes par ménage" width="45%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-11-2.png" alt="Le nombre de personnes par ménage" width="45%" />
 <p class="caption">
 Figure 1.3: Le nombre de personnes par ménage
 </p>
@@ -699,7 +702,7 @@ Figure 1.3: Le nombre de personnes par ménage
 <p>Dans l’histogramme, les intervalles sont représentés sur l’axe des abscisses. Au-dessus de chaque intervalle, on dessine un rectangle dont la surface est propostionnelle à son effectif. La base étant la longueur de l’intervalle, la hauteur de chaque rectangle s’interprète comme une densité (effectif par unité de longueur).</p>
 <table class="kable_wrapper table" style="margin-left: auto; margin-right: auto;">
 <caption>
-<span id="tab:unnamed-chunk-11">Table 1.2: </span>Variable quantitative: données brutes (gauche) et agrégées (droite).
+<span id="tab:unnamed-chunk-12">Table 1.2: </span>Variable quantitative: données brutes (gauche) et agrégées (droite).
 </caption>
 <tbody>
 <tr>
@@ -820,13 +823,13 @@ effectif
 </table>
 <p>Le nombre de classes doit être choisi de façon à ce que l’effectif moyen par intervalle soit suffisamment grand afin de pas être gêné par des irrégularités locales et, au contraire, afin de mettre en évidence une tendance générale.</p>
 <p>Soit l’exemple suivant: on s’intéresse à la taille de 237 étudiants<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>.</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-13-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-14-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Celà permet aussi de présenter la distribution de l’échantillon.</p>
 <p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relativespour pouvoir superposer facilement des distributions de référence.</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-14-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-15-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>Une autre graphique à base des quartiles est la boîte à dispersion ou <strong>boîte à moustaches</strong> (<strong>boxplot</strong>). Un rectangle, délimité par les premier et troisième quartiles, représente <span class="math inline">\(50\%\)</span> de la population. Dans ce rectangle, une barre centrale représente la médiane. De part et d’autre du rectangle, on figure deux segments dont la longueur est environ 1.5 fois l’écart interquartile: “environ” car chaque segment est en fait délimité par une observation réelle incluse dans cet intervalle, celle qui est la plus éloignée de la médiane. Enfin, les observations au-delà de ces limites sont représentées individuellement.</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-15"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-15-1.png" alt="Boîte à moustaches de Rythme cardiaque de 237 étudiants" width="70%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-16"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-16-1.png" alt="Boîte à moustaches de Rythme cardiaque de 237 étudiants" width="70%" />
 <p class="caption">
 Figure 1.4: Boîte à moustaches de Rythme cardiaque de 237 étudiants
 </p>
@@ -1124,8 +1127,8 @@ individu
 <div id="deux-variables-quantitatives" class="section level3 unnumbered">
 <h3>Deux variables quantitatives</h3>
 <p>Pour étudier la liaison entre deux variables quantitatives (discrètes), on commence par faire un graphique du type <strong>nuage de points (scatterplot)</strong>. La forme générale de ce graphique indique s’ll existe ou non une liaison entre les deux variables. Il s’agit d’un graphique très commode pour représenter les observations simultanées de deux variables quantitatives.</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-19"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-19-1.png" alt="Exemple de nuage de points représentant la consommation de carburant en fonction du poids de voitures. L'exemple extrait du dataset mtcars dans R" width="70%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-20"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-20-1.png" alt="Exemple de nuage de points représentant la consommation de carburant en fonction du poids de voitures. L'exemple extrait du dataset mtcars dans R" width="70%" />
 <p class="caption">
 Figure 1.5: Exemple de nuage de points représentant la consommation de carburant en fonction du poids de voitures. L’exemple extrait du dataset mtcars dans R
 </p>
@@ -1179,8 +1182,8 @@ Figure 1.6: Illustration de l’effet de la variation of the effect of varying t
 <p>Sur ce <a href="http://tylervigen.com/spurious-correlations" target="_blank">lien <i class="fas  fa-external-link-alt "></i></a> on trouve des exemples de variables associées linéairement mais non liées de manière causale.</p>
 </div>
 <p>D’autre part, une corrélation nulle ne signifie pas que deux variables sont indépendantes. Voici quelques exemples:</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-20"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-20-1.png" alt="Exemples où la corrélation est presque nulle mais les variables ne sont pas indépendantes." width="45%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-20-2.png" alt="Exemples où la corrélation est presque nulle mais les variables ne sont pas indépendantes." width="45%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-21"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-1.png" alt="Exemples où la corrélation est presque nulle mais les variables ne sont pas indépendantes." width="45%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-2.png" alt="Exemples où la corrélation est presque nulle mais les variables ne sont pas indépendantes." width="45%" />
 <p class="caption">
 Figure 1.7: Exemples où la corrélation est presque nulle mais les variables ne sont pas indépendantes.
 </p>
@@ -1193,8 +1196,8 @@ Figure 1.7: Exemples où la corrélation est presque nulle mais les variables ne
 variable quantitative <span class="math inline">\(Y\)</span>. On a alors <span class="math inline">\(p\)</span> sous-populations déterminées par les <span class="math inline">\(p\)</span> modalités de <span class="math inline">\(X\)</span>.</p>
 <p>L’étude de la liaison entre <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> consiste en l’étude des différences entre ces sous-populations: il y aura absence de lien si on ne distingue pas de différence notoire dans les caractéristiques de ces différentes sous-populations.</p>
 <p>Une façon commode de représenter les données dans le cas de l’étude simultanée d’une variable quantitative et d’une variable qualitative consiste à réaliser des boîtes à moustaches parallèles. Les boîtes à moustaches permettent de comparer facilement des groupes d’individus, par exemple ici les garçons et les filles parmi 237 étudiants<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>:</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-21"></span>
-<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-1.png" alt="Boîtes à moustaches par sexe" width="40%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-21-2.png" alt="Boîtes à moustaches par sexe" width="40%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-22"></span>
+<img src="Statistique_infentielle_files/figure-html/unnamed-chunk-22-1.png" alt="Boîtes à moustaches par sexe" width="40%" /><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-22-2.png" alt="Boîtes à moustaches par sexe" width="40%" />
 <p class="caption">
 Figure 1.8: Boîtes à moustaches par sexe
 </p>
@@ -1382,6 +1385,9 @@ utilise donc l’indice appelé khi-deux (chi-square) et défini comme suit:
 \]</span></p>
 <p>Le coefficient <span class="math inline">\(\chi^{2}\)</span> est toujours positif ou nul et il est d’autant plus grand que
 la liaison entre les deux variables considérés est forte.</p>
+<div class="rmdinsight">
+<p>Un document complet et intéressant sur la visualization des données est sur ce <a href="https://serialmentor.com/dataviz/index.html" target="_blank">lien <i class="fas  fa-external-link-alt "></i></a></p>
+</div>
 
 </div>
 </div>
