--- a/Statinf/tp-statistique-descriptive-avec-r.html
+++ b/Statinf/tp-statistique-descriptive-avec-r.html
@@ -143,7 +143,9 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -193,6 +195,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.3</b> Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.3.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.1</b> Loi faible des grands nombres</a></li>
 <li class="chapter" data-level="2.3.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.2</b> Loi forte des grands nombres</a></li>
+<li class="chapter" data-level="" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#illustration-de-la-loi-des-grands-nombres"><i class="fa fa-check"></i>Illustration de la loi des grands nombres</a></li>
 <li class="chapter" data-level="2.3.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.3.3</b> Théorème central limite</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
@@ -460,7 +463,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 <p><strong>Représentations graphiques pour le croisement de deux variables qualitatives</strong></p>
 <p>On peut représenter le croisement de deux variables qualitatives avec un diagramme en bâtons. Dans le cas de deux variables qualitatives, la fonction <code>barplot()</code> prend comme premier paramètre le tableau de contingence.</p>
 <p><strong>14.</strong> Afficher un diagramme en bâtons représentant la distribution du tabagisme (variable <code>Smoke</code>) en fontion du sexe des étudiants. La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-51-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-52-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <div class="rmdinsight">
 <p>On remarque qu’il y a plus de femmes que des hommes fument régulièrement. (selon l’enquête réalisée)</p>
 </div>
@@ -477,7 +480,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 quantitative en fonction (caractère <code>~</code> ) de la variable quantitative.</p>
 <p><strong>18.</strong> Afficher sur la même figure la fréquence cardiaque en fontion du sexe. Interpréter la figure.</p>
 <p>La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-53-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-54-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>19.</strong> Afficher sur la même figure la taille (variable <code>Height</code>) en fontion du sexe. Interpréter la figure.</p>
 <!-- **Indicateurs pour le croisement de deux variables quantitatives** -->
 <!-- Le calcul du coefficient de corrélation de Pearson est réalisé au moyen de la fonction `cor()`. Ce coefficient mesure l’intensité du *lien linéaire* entre deux variables quantitatives. -->
