--- a/Statinf/tp-statistique-descriptive-avec-r.html
+++ b/Statinf/tp-statistique-descriptive-avec-r.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-10-09" />
+<meta name="date" content="2019-10-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -454,7 +454,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 ([lien <i class="fas  fa-external-link-alt "></i>](https://mistis.inrialpes.fr/software/SMEL/cours/sd/node16.html){target="_blank"})
 
  -->
-<strong>12.</strong> Un tableau de contingence des effectifs joints croisant deux variables qualitatives est réalisé par la fonction <code>table()</code>. Effectuer et afficher le croisement du sexe (<code>Sex</code>) et de l’âge d’un étudiant (<code>Age</code>).</p>
+<strong>12.</strong> Un tableau de contingence des effectifs joints croisant deux variables qualitatives est réalisé par la fonction <code>table()</code>. Effectuer et afficher le croisement de deux variables (<code>Sex</code>) et (<code>Smoke</code>).</p>
 <p><strong>13.</strong> Utiliser la fonction <code>addmargins()</code> pour ajouter au tableau les effectifs marginaux.
 <!-- 
  (Lire ce [lien <i class="fas  fa-external-link-alt "></i>](http://www.modalisa.com/support/lexique/effectifs-marginaux.php){target="_blank"} à propos des effectifs marginaux). 
@@ -463,7 +463,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 <p><strong>Représentations graphiques pour le croisement de deux variables qualitatives</strong></p>
 <p>On peut représenter le croisement de deux variables qualitatives avec un diagramme en bâtons. Dans le cas de deux variables qualitatives, la fonction <code>barplot()</code> prend comme premier paramètre le tableau de contingence.</p>
 <p><strong>14.</strong> Afficher un diagramme en bâtons représentant la distribution du tabagisme (variable <code>Smoke</code>) en fontion du sexe des étudiants. La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-52-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-66-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <div class="rmdinsight">
 <p>On remarque qu’il y a plus de femmes que des hommes fument régulièrement. (selon l’enquête réalisée)</p>
 </div>
@@ -480,7 +480,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 quantitative en fonction (caractère <code>~</code> ) de la variable quantitative.</p>
 <p><strong>18.</strong> Afficher sur la même figure la fréquence cardiaque en fontion du sexe. Interpréter la figure.</p>
 <p>La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-54-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-68-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>19.</strong> Afficher sur la même figure la taille (variable <code>Height</code>) en fontion du sexe. Interpréter la figure.</p>
 <!-- **Indicateurs pour le croisement de deux variables quantitatives** -->
 <!-- Le calcul du coefficient de corrélation de Pearson est réalisé au moyen de la fonction `cor()`. Ce coefficient mesure l’intensité du *lien linéaire* entre deux variables quantitatives. -->
