--- a/Statinf/tp-statistique-descriptive-avec-r.html
+++ b/Statinf/tp-statistique-descriptive-avec-r.html
@@ -375,7 +375,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 </div>
 <div id="indicateurs-de-dispersion" class="section level3 unnumbered">
 <h3>Indicateurs de dispersion</h3>
-<p><strong>12.</strong> Calculer la variance et l’écart-type du nombre d’arbres plantés sur les parcelles.</p>
+<p><strong>12.</strong> Calculer la variance du nombre d’arbres plantés sur les parcelles.</p>
 <p><strong>13.</strong> Calculer maintenant l’écart-type et vérifier que l’écart-type est la racine carrée de la variance.</p>
 <p><strong>14.</strong> Calculer la variance vous-même. La variance obtenue est elle la même que la précédente?</p>
 <div class="rmdinsight">
@@ -463,7 +463,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 <p><strong>Représentations graphiques pour le croisement de deux variables qualitatives</strong></p>
 <p>On peut représenter le croisement de deux variables qualitatives avec un diagramme en bâtons. Dans le cas de deux variables qualitatives, la fonction <code>barplot()</code> prend comme premier paramètre le tableau de contingence.</p>
 <p><strong>14.</strong> Afficher un diagramme en bâtons représentant la distribution du tabagisme (variable <code>Smoke</code>) en fontion du sexe des étudiants. La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-66-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-63-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <div class="rmdinsight">
 <p>On remarque qu’il y a plus de femmes que des hommes fument régulièrement. (selon l’enquête réalisée)</p>
 </div>
@@ -480,7 +480,7 @@ En 1997 est mis en place le <em>Comprehension R Archive Network (CRAN)</em> qui 
 quantitative en fonction (caractère <code>~</code> ) de la variable quantitative.</p>
 <p><strong>18.</strong> Afficher sur la même figure la fréquence cardiaque en fontion du sexe. Interpréter la figure.</p>
 <p>La figure souhaitée est la suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-68-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-65-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>19.</strong> Afficher sur la même figure la taille (variable <code>Height</code>) en fontion du sexe. Interpréter la figure.</p>
 <!-- **Indicateurs pour le croisement de deux variables quantitatives** -->
 <!-- Le calcul du coefficient de corrélation de Pearson est réalisé au moyen de la fonction `cor()`. Ce coefficient mesure l’intensité du *lien linéaire* entre deux variables quantitatives. -->
