--- a/Statinf/introduction.html
+++ b/Statinf/introduction.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-10-11" />
+<meta name="date" content="2019-10-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -369,6 +369,7 @@ les sondages, aux sports, à l’assurance, et à toutes les recherches scientif
 souhaite évidemment avoir une évaluation de leur durée de vie, de la probabilité qu’elles
 fonctionnent correctement pendant plus d’un mois, un an, etc… Mais si l’on veut utiliser les résultats théoriques énoncés plus haut, il faut d’une part pouvoir s’assurer qu’on a choisi un bon modèle, c’est-à-dire que la durée de vie de ces ampoules est bien une variable aléatoire de loi exponentielle, et, d’autre part, pouvoir calculer d’une manière ou d’une autre la valeur du paramètre <span class="math inline">\(\lambda\)</span>. C’est la statistique qui va permettre de résoudre ces problèmes. Pour cela, il faut faire une expérimentation, recueillir des données et les analyser.</p>
 <p>On met donc en place ce qu’on appelle un <strong>essai</strong> ou une <strong>expérience</strong>. On fait fonctionner en parallèle et indépendamment les unes des autres <span class="math inline">\(n = 10\)</span> ampoules identiques, dans les mêmes conditions expérimentales, et on relève leurs durées de vie. Admettons que l’on obtienne les durées de vie suivantes, exprimées en heures :</p>
+<pre><code>#ans&gt; Warning in knitr::kable(t(x)): restarting interrupted promise evaluation</code></pre>
 <table>
 <tbody>
 <tr>
