--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -903,7 +903,7 @@ Figure 1.4: Boîte à moustaches de Rythme cardiaque de 237 étudiants
 \overline{x}=\frac{18+16+15+14+12+17+11}{7}=14.71
 \]</span></p>
 <ul>
-<li>Si les données statistiques sont <strong>groupées par <span class="math inline">\(n\)</span> modalités</strong>, <span class="math inline">\(n_i\)</span> étant l’effectif correspondant à la modalité <span class="math inline">\(x_i\)</span> :</li>
+<li>Si les données statistiques sont <strong>groupées par modalités</strong>, <span class="math inline">\(n_i\)</span> étant l’effectif correspondant à la modalité <span class="math inline">\(x_i\)</span> :</li>
 </ul>
 <p><span class="math display">\[
 \overline{x}=\frac{1}{n} \sum_{i=1}^{p} n_{i} x_{i}
